--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-aaa
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>HBoost Redirect</title>
+    <meta http-equiv="refresh" content="0; URL=http://hboost.fr/src/login/login.html" />
+</head>
+
+<body>
+  <p>Redirection en cours ...</p>
+</body>
+</html>
