--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HBoost Redirect</title>
-    <meta http-equiv="refresh" content="0; URL=http://hboost.fr/src/login/login.html" />
+    <meta http-equiv="refresh" content="0; URL=http://acterax.github.io/src/login/login.html" />
 </head>
 
 <body>
